# zanka

./: .hg_archival.txt
branches/P7/wire/: INSTALL  Makefile.in  config.h.in  configure  configure.in
branches/P7/wire/wire/: chats.c  chats.h  client.c  client.h  commands.c  commands.h  ignores.c  ignores.h  main.c  main.h  messages.c  messages.h  server.c  server.h  spec.c  spec.h  terminal.c  terminal.h  topic.c  topic.h  users.c  users.h  windows.c  windows.h
branches/P7/wire/wire.xcodeproj/: project.pbxproj
tags/WiredTracker-1.0.2/trackerd/: INSTALL  LICENSE  config.h.in  configure  configure.in
tags/WiredTracker-1.0.2/trackerd/trackerd/: banlist.c  clients.c  clients.h  commands.h  main.c  tracker.c  trackerdctl.in
tags/trackerd-1.0/trackerd/: LICENSE  Makefile.in  NEWS  config.h.in  configure  configure.in
tags/trackerd-1.0/trackerd/man/: trackerd.8  trackerd.conf.5  trackerdctl.1
tags/trackerd-1.0/trackerd/trackerd/: banlist.c  banlist.h  clients.c  clients.h  commands.c  commands.h  main.c  main.h  servers.c  servers.h  settings.c  settings.h  tracker.c  tracker.h  trackerdctl.in  version.c  version.h
tags/wire-1.0/wire/: Makefile.in  config.h.in  configure  configure.in
tags/wire-1.0/wire/man/: wire.1
tags/wire-1.0/wire/wire/: Makefile.in  client.c  client.h  commands.c  main.c  utility.h
tags/wire-1.1.2/libwired/: Makefile.in  config.h.in  configure.in
tags/wire-1.1.2/libwired/libwired/base/: wi-assert.c  wi-assert.h  wi-private.h  wi-runtime.c
tags/wire-1.1.2/libwired/libwired/collections/: wi-enumerator.h
tags/wire-1.1.2/libwired/libwired/data/: wi-string.h  wi-uuid.c
tags/wire-1.1.2/libwired/libwired/file/: wi-file.h  wi-fts.h
tags/wire-1.1.2/libwired/libwired/net/: wi-ip.h
tags/wire-1.1.2/libwired/libwired/p7/: wi-p7-message.c  wi-p7-socket.c
tags/wire-1.1.2/libwired/libwired/system/: wi-system.h
tags/wire-1.1.2/libwired/libwired/thread/: wi-timer.c
tags/wire-1.1.2/libwired/test/tests/: wi-runtime-tests.c
tags/wire-1.1/wire/: LICENSE  Makefile.in  NEWS  README  configure  configure.in
tags/wire-1.1/wire/man/: wire.1
tags/wire-1.1/wire/wire/: client.c  client.h  commands.c  commands.h  files.h  ignores.c  main.c  main.h  server.c  transfers.c  users.h  version.c  version.h  windows.c
tags/wired-1.0/wired/: config.h.in  configure  configure.in
tags/wired-1.0/wired/wired/: files.c  files.h  hotline.c  main.h  server.c  server.h  settings.h  wired.conf.in
tags/wired-1.2/wired/: Makefile.in  configure  configure.in
tags/wired-1.2/wired/man/: hl2wired.1
tags/wired-1.2/wired/run/: users
tags/wired-1.2/wired/wired/: Makefile.in  accounts.c  accounts.h  files.c  files.h  main.c  main.h  news.h  server.c  settings.c  utility.c  utility.h  wiredctl.in
tags/wired-1.3/wired/: Makefile.in  NEWS  configure.in
tags/wired-1.3/wired/man/: hl2wired.1
tags/wired-1.3/wired/wired/: banlist.c  chats.c  clients.c  commands.c  commands.h  files.c  files.h  main.h  trackers.h  transfers.c  wiredctl.in
trunk/Footagehead/: FHApplicationController.h  FHApplicationController.m  FHBrowserController.m  FHCache.m  FHFeedHandler.m  FHFileCell.h  FHFileHandler.m  FHFlickrHandler.h  FHHTMLHandler.m  FHHTMLParser.m  FHImage.m  FHImageLoader.h  FHImageLoader.m  FHImageView.h  FHImageView.m  FHInspectorController.m  FHLHAHandler.m  FHPreferencesController.m  FHRangeHandler.h  FHRangeHandler.m  FHSettings.m  FHSlideshowController.m  FHSpotlightHandler.h  FHSpread.m  FHTableView.h  FHURLHandler.m  FHWindowController.m  Inspector.tiff  Reload.tiff  main.m  prefix.pch
trunk/Spiral/: 3gpp.icns  3gpp2.icns  AppleTV.tiff  AtomicParsley  Drill.mov  ExportFormats.plist  Fullscreen.tiff  HD.tiff  HUDBackground.tiff  HUDElapsedTimeBackground.tiff  HUDExit.tiff  HUDNext.tiff  HUDPrevious.tiff  HUDRemainingTimeBackground.tiff  HalfViewed.tiff  IMDb.tiff  Info.plist  KeyBindings.tiff  LCDBackgroundCenter.tiff  LCDBackgroundLeft.tiff  LCDBackgroundRight.tiff  Minus.tiff  NSImage-SPAdditions.h  NSImage-SPAdditions.m  NSString-SPAdditions.h  NSString-SPAdditions.m  Next.tiff  OverlayFastForward.tiff  OverlayNext.tiff  OverlayPause.tiff  OverlayPlay.tiff  OverlayPrevious.tiff  OverlayRewind.tiff  OverlaySkipBack.tiff  OverlaySkipForward.tiff  OverlayStop.tiff  PSP.tiff  Pause.tiff  Play.tiff  PlaylistExportGroup.icns  (+115 more)
trunk/Tuna/: Info.plist  NSDocumentController-TNAdditions.h  NSDocumentController-TNAdditions.m  TNDocument.h  TNDocument.m  TNMainController.h  TNMainController.m  TNPerlFunction.h  TNPerlFunction.m  TNPerlNode.h  TNPerlNode.m  TNPerlParser.h  TNPerlParser.m  TNPerlTree.h  TNPerlTree.m  TNProfilerController.h  TNProfilerController.m  TNSessionController.h  TNSessionController.m  TNSettings.h  TNSettings.m  main.m  prefix.pch
trunk/WiredClient/: Columns.tiff  Console.tiff  EditAccount.tiff  NSAlert-WCAdditions.h  NSString-WCAdditions.m  SmallerText.tiff  Tracker.tiff  Uploads12.tiff  WCAccountEditor.m  WCAccounts.h  WCApplicationController.m  WCChat.m  WCChatTextView.h  WCChatWindow.m  WCConnectionController.m  WCConsole.h  WCConversation.m  WCDock.m  WCFile.h  WCFile.m  WCFiles.h  WCFiles.m  WCFilesBrowserCell.h  WCFilesController.h  WCFilesController.m  WCFilesTableView.m  WCKeychain.h  WCKeychain.m  WCLink.m  WCMessages.h  WCMessages.m  WCMessagesWindow.h  WCMessagesWindow.m  WCNews.h  WCNews.m  WCNewsPost.h  WCPreferences.m  WCPreview.h  WCPreview.m  WCPrivateChat.h  (+25 more)
trunk/WiredServer/: WCConfigController.m  WCDashboardController.m  WCLogController.m  WCSettings.h  WCSettings.m  WCStatusController.m  makepkg.sh  wired.sh
trunk/WiredTracker/: trackerd.sh
trunk/trackerd/: Makefile.in  configure
trunk/wire/: Makefile.in  config.h.in  configure
trunk/wired/: configure
unsupported/CPUMonitor/: CPUController.h  CPUController.m  CPUDataSource.h  CPUDataSource.m  CPUExpandedView.h  CPUExpandedView.m  CPUFloatingView.h  CPUFloatingView.m  CPUMonitor.icns  CPUMonitor.xcconfig  CPUPanel.h  CPUPanel.m  CPUSettings.h  CPUSettings.m  Info.plist  StandardView00.tiff  StandardView01.tiff  StandardView02.tiff  StandardView03.tiff  main.m  (+17 more)
(+4469 files in other folders)
